--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node src/server.js",
-    "start-prod": "NODE_ENV=production node /src/server.js",
-    "start-dev": "nodemon src/server.js"
+    "start" : "node ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
